# ladec-2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: benchmark-runner.ipynb  emoji-counting.ipynb  mem-optimize.ipynb  time-optimize.ipynb
src/: __init__.py  baseline.py  challenge.ipynb  q1_memory.py  q1_time.py  q2_memory.py  q2_time.py  q3_memory.py  q3_time.py
src/models/: solution.py
src/solutions/: __init__.py  baseline.py  memory.py  time.py
tests/: conftest.py  test_baseline.py
tests/assets/: tweets_sample.json
