[tool.poetry]
name = "ladec-2"
version = "0.0.1"
description = "LATAM Airlines DE Challenge"
authors = ["Enrique Olivares"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
